--- a/package.json
+++ b/package.json
@@ -10,9 +10,14 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@react-three/drei": "^10.7.7",
+    "@react-three/fiber": "^9.4.2",
+    "@react-three/rapier": "^2.2.0",
     "@tailwindcss/vite": "^4.1.18",
     "framer-motion": "^12.23.26",
     "gsap": "^3.14.2",
+    "lenis": "^1.3.16",
+    "meshline": "^3.3.1",
     "postprocessing": "^6.38.2",
     "react": "^19.2.0",
     "react-dom": "^19.2.0",
